# charon

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  GEMINI.md  Makefile  PRODUCTION.md  README.md  api_main.py  datbase.py  docker-compose.prod.yml  docker-compose.yml  main.py  miner_main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: containers.yml
architecture/: Charon-Excalidraw.excalidraw  charon.excalidraw
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/jobs/: fetch_rates.py  runner.py
backend/app/services/: nbp_client.py  scheduler.py  signal_engine.py  silver_provider.py
backend/tests/: test_api_status.py  test_signal_engine.py
charon/: cache.py  collector.py  constants.py  db.py  decision.py  nbp_client.py
db/: charon.sql
docker/: init-db.sql  reverse-proxy.conf
docs/: api.md
frontend/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json  requirements.txt  streamlit_app.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Dashboard.tsx  DecisionTable.tsx  MetaBar.tsx  RateChart.tsx  StatCards.tsx
frontend/lib/: api.ts  config.ts  format.ts  icons.ts  metrics.ts  (+1 more)
scripts/: cron.sh  migrate.py
templates/: index.html
tests/: conftest.py  test_collector.py  test_db.py  test_decision.py  test_integration.py  test_scheduler.py
(+80 files in other folders)
