[project]
name = "charon-backend"
version = "0.1.0"
description = "Charon FX backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.26",
    "croniter>=2.0",
]

[project.optional-dependencies]
 dev = ["pytest>=7.4", "httpx>=0.26"]

[tool.pytest.ini_options]
pythonpath = ["."]
